--- a/.github/workflows/sui-faucet.yml
+++ b/.github/workflows/sui-faucet.yml
@@ -3,17 +3,16 @@ name: sui faucet
 on:
   schedule:
     - cron: '*/15 * * * *'  # 每 15 分钟执行一次
+  workflow_dispatch:  # 手动触发支持
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
 
     steps:
-    # 检出代码到工作目录
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # 赋予脚本执行权限并运行脚本
     - name: Run script
       run: |
         chmod +x ./scripts/sui-faucet.sh
